--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://amiraghajan78.github.io/shopping-card",
+  "homepage": "https://amiraghajan78.github.io/shopping-card/",
   "name": "project-2",
   "private": true,
   "version": "0.0.0",
